# MLOPsChatBox

chatbot-prod/: Dockerfile  gunicorn_conf.py  main.py  pyproject.toml  requirements (copy).txt  requirements.txt
chatbot-prod/api/v1/routers/: auth.py  chat.py  conversation.py  test.py  upload.py
chatbot-prod/core/: authToken.py  config.py  data_directory.py  database.py  decorators.py  env_var.py  generate_title.py  hashing.py  oauth2.py  qa_prompt.py  upload_utils.py  vector_store.py
chatbot-prod/schemas/: __init__.py  chat.py  conversation.py  document.py  message.py  token.py  upload.py  user.py
